--- a/assignment-1/main.tex
+++ b/assignment-1/main.tex
@@ -312,7 +312,7 @@ This document provides the solution to question 14 in Chapter 13 of the 12th gra
 
 \begin{table}[h]
 \input\def\inputGnumericTable{}  
-\input{../tables/table.tex}
+\input{tables/table.tex}
 \caption{Given Information}
 \label{Table 1}
 \end{table}
@@ -335,7 +335,7 @@ p &= \frac{\text{No.of defective bulbs}}{\text{Total no.of bulbs}} = \frac{10}{1
 
 \begin{figure}[h]
         \centering
-        \includegraphics[width=\columnwidth]{../figures/pmf_plot.png}
+        \includegraphics[width=\columnwidth]{figures/pmf_plot.png}
         \caption{PMF Plot}
         \label{fig: PMF Plot}
     \end{figure}
